--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,6 @@ body {
 }
 
 #gameboard {
-    --grid-size: 4;
-    --cell-size: 20vmin;
-    --cell-gap: 2vmin;
     display: grid;
     grid-template: repeat(var(--grid-size), var(--cell-size)) / repeat(var(--grid-size), var(--cell-size));
     background-color: #ccc;
@@ -32,10 +29,6 @@ body {
 }
 
 .tile {
-    --x: 1;
-    --y: 3;
-    --background-lightness: 80%;
-    --text-lightness: 20%;
     position: absolute;
     background-color: aqua;
     display: flex;
@@ -49,4 +42,13 @@ body {
     font-weight: bold;
     background-color: hsl(200, 50%, var(--background-lightness));
     color: hsl(200, 25%, var(--text-lightness));
+    animation: show 200ms ease-in-out;
+    transition: 100ms ease-in-out;
+}
+
+@keyframes show {
+    0% {
+        opacity: 0.5;
+        transform: scale(0);
+    }
 }
